syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package blog;
option go_package = "./blog";

message Blog {
    string                    Id       = 1;
    string                    Title    = 2;
    int32                     Rate     = 3;
    bool                      IsDone   = 4;
    google.protobuf.Timestamp Updated  = 5;
}

message BlogId {
    string Id = 1;
}

service BlogService {
    rpc ListBlogs  (google.protobuf.Empty)   returns (stream Blog);
    rpc ReadBlog   (BlogId)                  returns (Blog);
    rpc CreateBlog (Blog)                    returns (google.protobuf.Empty);
    rpc UpdateBlog (Blog)                    returns (google.protobuf.Empty);
    rpc RemoveBlog (BlogId)                  returns (google.protobuf.Empty);
}